// Vitest Snapshot v1

exports[`App > renders correctly 1`] = `
<div
  className="App"
>
  <div
    className="header"
  >
    <a
      href="/"
      onClick={[Function]}
      style={
        {
          "textDecoration": "none",
        }
      }
    >
      <h2>
        🏠Funny Movies
      </h2>
    </a>
    <form
      className="form-sign-in-up"
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        placeholder="email"
        required={true}
        type="email"
        value=""
      />
      <input
        onChange={[Function]}
        placeholder="password"
        required={true}
        type="password"
        value=""
      />
      <button
        type="submit"
      >
        Login / Register
      </button>
    </form>
  </div>
  <div
    className="movie-list"
  />
</div>
`;

exports[`Header > Given view for guest > should render sign in/up button 1`] = `
<div
  className="header"
>
  <a
    href="/"
    onClick={[Function]}
    style={
      {
        "textDecoration": "none",
      }
    }
  >
    <h2>
      🏠Funny Movies
    </h2>
  </a>
  <form
    className="form-sign-in-up"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      placeholder="email"
      required={true}
      type="email"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="password"
      required={true}
      type="password"
      value=""
    />
    <button
      type="submit"
    >
      Login / Register
    </button>
  </form>
</div>
`;

exports[`Header > Given view for signed in user > should render Logout button 1`] = `
<div
  className="header"
>
  <a
    href="/"
    onClick={[Function]}
    style={
      {
        "textDecoration": "none",
      }
    }
  >
    <h2>
      🏠Funny Movies
    </h2>
  </a>
  <div
    className="logged-in-state"
  >
    <p>
      Welcome 
      test@gmail.com
    </p>
    <button
      onClick={[Function]}
    >
      Share a movie
    </button>
    <button
      onClick={[Function]}
    >
      Logout
    </button>
  </div>
</div>
`;

exports[`Home > should render correctly 1`] = `
<div
  className="movie-list"
>
  <div
    className="movie-item"
  >
    <div>
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
        allowFullScreen={true}
        frameBorder="0"
        height={300}
        src="https://www.youtube.com/embed/undefined"
        title="youtube"
        width={450}
      />
    </div>
    <div
      className="info"
    >
      <p
        className="title"
      >
        youtube
      </p>
      <p>
        <strong>
          Shared by: 
        </strong>
      </p>
      <p>
        <strong>
          Description: 
        </strong>
      </p>
      <div
        className="description"
      />
    </div>
  </div>
</div>
`;

exports[`ShareMovie > should render correctly 1`] = `
<div
  className="share-movie"
>
  <fieldset>
    <legend>
      Share a Youtube movie
    </legend>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label>
          Youtube URL: 
        </label>
        <input
          autoFocus={true}
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <button
        type="submit"
      >
        Share
      </button>
    </form>
  </fieldset>
</div>
`;
